# codex-game

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  Makefile.linux  Makefile.macos  README.md  _headers  build-cmake.bat  build-conan.bat  build-mingw-standalone.bat  build-simple.bat  build-vs.bat  build-web.bat  build-web.sh  build-windows-direct.ps1  build-windows-simple.bat  build.bat  build.ps1  build.sh  settings.txt  vcpkg.json
.github/workflows/: build.yml  deploy-pages.yml
assets/: cat.aseprite  game_level.tmx
src/: asset_manager.cpp  asset_manager.h  bitmap_font.cpp  enemy.cpp  enemy.h  game.cpp  game.h  game_manager.cpp  game_manager.h  item.cpp  item.h  main.cpp  menu_scene.cpp  menu_scene.h  pet.cpp  pet.h  player.cpp  player.h  scene_manager.cpp  scene_manager.h  settings.cpp  tmx_loader.h
src/entities/: enemy.cpp  entity.cpp  entity.h  item.h  player.cpp  player.h  projectile.cpp  projectile.h
src/rendering/: bitmap_font.h  camera.cpp  camera.h
src/scenes/: game.cpp  game.h  menu_scene.cpp  player_select_scene.cpp  player_select_scene.h  scene_manager.cpp  scene_manager.h
src/systems/: asset_manager.cpp  asset_manager.h  game_manager.cpp  game_manager.h  settings.h
src/utils/: tmx_loader.cpp
web/: index.html
